# specs

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: AddFmt.cmake
src/: CMakeLists.txt  archetype.cpp  archetype.h  component.cpp  component.h  core.cpp  core.h  entity.cpp  entity.h  query.cpp  query.h  template.cpp  template.h  types.h
test/: CMakeLists.txt  core_test.cpp  template_test.cpp
